buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.3.4.RELEASE")
    }
}

plugins {
    id 'java'
    id 'idea'
    id 'application'
    id "org.springframework.boot" version "2.3.4.RELEASE"
    id "io.spring.dependency-management" version "1.0.11.RELEASE"
}

group 'com.kuuhaku'
version 'STANDALONE'
sourceCompatibility = JavaVersion.VERSION_15
targetCompatibility = JavaVersion.VERSION_15
applicationDefaultJvmArgs = [
        "-Xms512M",
        "-Xmx1G",
        "-XX:+UseZGC",
        "-XX:+UseStringDeduplication",
        "-XX:+HeapDumpOnOutOfMemoryError",
        "-Dfile.encoding=UTF-8",
        "-Duser.timezone=America/Sao_Paulo",
        "-Djava.awt.headless=true",
        "-Dsun.java2d.opengl=true",
        "-Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector"
]

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.3.4.RELEASE'
    implementation group: "org.java-websocket", name: "Java-WebSocket", version: "1.5.1"
    implementation group: 'org.bytedeco', name: 'javacv', version: '1.5.5'
    implementation group: 'org.bytedeco', name: 'javacv-platform', version: '1.5.5'
    implementation group: 'org.json', name: 'json', version: '20210307'
    implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
    implementation group: 'commons-io', name: 'commons-io', version: '2.9.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.3.4.RELEASE'
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

compileJava.options.encoding = 'UTF-8'